# MySite-Django

./: .gitignore  LICENSE  README.md  build.sh  build_files.sh  guide.py  manifest.json  package-lock.json  package.json  pm2.json  pyproject.toml  requirements.txt  robots.txt  service-worker.js  shell.sh  sitemap.xml  vercel.json
api/: admin.py  models.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_datastore_data.py  0002_remove_datastore_value_delete_data_delete_datastore.py  0003_alter_datastore_data.py  0004_rename_name_data_value_data_data.py
base/: admin.py  basic.py  content.py  fcm_config.py  firebase.py  models.py  tests.py  urls.py  views.py
base/migrations/: 0001_initial.py  0002_adminsecret.py  0002_remove_user_name.py  0002_rename_yt_video_videos.py  0002_url_delete_mediafile_delete_video.py  0003_alter_user_email.py  0003_rename_videos_video.py  0003_yt_video_user_videos.py  0004_alter_user_managers_remove_user_username_and_more.py  0004_devices.py  0004_rename_videos_user_video.py  0005_alter_user_email_alter_user_first_name_and_more.py  0005_remove_user_video_user_videos_alter_yt_video_title.py  0005_rename_devices_device.py  0006_remove_device_user_id_device_user.py  0007_pwasubscription_delete_device.py
main/: settings.py  urls.py  wsgi.py
projects/: admin.py  models.py  urls.py  utils.py  views.py
projects/migrations/: 0001_initial.py  0002_delete_instagram.py
static/css/: main.css
static/js/: clara.js  firebase.js  firebase.mjs  (+5 more)
templates/: 404.html  footer.html  main.html  messages.html  navbar.html  offline.html
(+37 files in other folders)
