[tool.poetry]
name = "mysite-django"
version = "0.1.0"
description = "Django Personal Website"
authors = ["Jerit Baiju <jeritalumkal@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mysite_django"}]

[tool.poetry.dependencies]
python = "^3.10"
dj-database-url = "^1.0.0"
psycopg2-binary = "^2.9.5"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
